bin/tests/snapshots/array_spacing__ca443c70a3f73815d2e9546b92d9b334_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
