bin/tests/snapshots/array_spacing__ca443c70a3f73815d2e9546b92d9b334_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
<temp_file_path>>7:3:W:31:[attribute_ordering] `bar` is out of alphabetical order
<temp_file_path>>3:3:W:33:[array_spacing] a blank line should come before this multiline array
<temp_file_path>>7:3:W:33:[array_spacing] a blank line should follow the multiline array above
