bin/tests/snapshots/array_spacing__ca443c70a3f73815d2e9546b92d9b334_lint_stderr.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:7:3 ]
   │
 7 │   bar = 2;
   │   ────┬───  
   │       ╰───── bar is out of alphabetical order
───╯
[array_spacing] Warning: Multiline array is not separated by blank lines
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │ ╭─▶   kernelModules = [
   ┆ ┆   
 6 │ ├─▶   ];
   │ │          
   │ ╰────────── a blank line should come before this multiline array
───╯
