bin/tests/snapshots/array_spacing__d2cb7f49c875cd64611d73bfd010482e_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];
}
---
